--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>learning git</title>
+    <title>About us</title>
 </head>
 <body>
-    <h1>learning git</h1>
-    <a href="./index.html">About us</a>
+    <h1>About us</h1>
+    <a href="./index.html">back to home</a>
 </body>
 </html>
